--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,6 +1,12 @@
 body {
 	margin-top:50px;
-}
+	-webkit-touch-callout: none; /* iOS Safari */
+  	-webkit-user-select: none;   /* Chrome/Safari/Opera */
+  	-khtml-user-select: none;    /* Konqueror */
+  	-moz-user-select: none;      /* Firefox */
+  	-ms-user-select: none;       /* Internet Explorer/Edge */
+  	user-select: none; 
+}	
 
 .left {
 	/*padding:0px;*/
