Fix display issues; game now displays 0 in front of numbers 1-9 and 'YOU' or 'COMP' for turn

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -125,6 +125,7 @@ background: linear-gradient(to right, #DAD299 , #cbe7d1); /* W3C, IE 10+/ Edge, 
 #turnDisplay {
 	font-size:16px;
 	margin-top:10px;
+	height:26px;
 }
 
 .display-button: {
