--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,5 +1,5 @@
 body {
-	margin-top:50px;
+	margin-top:15px;
 	font-family: 'Roboto Mono', serif ;
 
 	-webkit-touch-callout: none; /* iOS Safari */
@@ -16,6 +16,15 @@ background: -webkit-linear-gradient(to right, #DAD299 , #cbe7d1); /* Chrome 10-2
 background: linear-gradient(to right, #DAD299 , #cbe7d1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         
 }	
+
+h1 {
+	font-family: 'Nobile', serif;
+	font-weight:700;
+	font-size:80px;
+	text-align:center;
+	/*color:white;*/
+	text-shadow: 2px 2px 0px rgba(0, 0, 0, 1);
+}
 
 .left {
 	/*padding:0px;*/
@@ -51,6 +60,11 @@ background: linear-gradient(to right, #DAD299 , #cbe7d1); /* W3C, IE 10+/ Edge, 
 	background-color:#0d0d0d;
 	border:18px solid #0d0d0d;
 	position:relative;
+
+	-webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+
 }
 
 .row {
@@ -59,12 +73,16 @@ background: linear-gradient(to right, #DAD299 , #cbe7d1); /* W3C, IE 10+/ Edge, 
 
 .color {
 	height:175px;
+	-webkit-box-shadow: inset 0px 0px 50px 0px rgba(0,0,0,0.2);
+	-moz-box-shadow: inset 0px 0px 50px 0px rgba(0,0,0,0.2);
+	box-shadow: inset 0px 0px 50px 0px rgba(0,0,0,0.2);
 }
 
 #green {
 	/*background-color:green;*/
     border-radius: 100% 0px 0 0;
     /*cursor:pointer;*/
+
 }
 
 #red {
@@ -188,4 +206,10 @@ background: linear-gradient(to right, #DAD299 , #cbe7d1); /* W3C, IE 10+/ Edge, 
 
 .active {
 	background-color: rgba(255,255,255,0.5);
+}
+
+footer {
+	margin-top:40px;
+	text-align:center;
+	font-family: 'Nobile', serif;
 }
