--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,20 +1,15 @@
 body {
 	margin-top:15px;
 	font-family: 'Roboto Mono', serif ;
-
 	-webkit-touch-callout: none; /* iOS Safari */
   	-webkit-user-select: none;   /* Chrome/Safari/Opera */
   	-khtml-user-select: none;    /* Konqueror */
   	-moz-user-select: none;      /* Firefox */
   	-ms-user-select: none;       /* Internet Explorer/Edge */
   	user-select: none; 
-
-
-
-background: #cbe7d1; /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #DAD299 , #cbe7d1); /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #DAD299 , #cbe7d1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        
+	background: #cbe7d1; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #DAD299 , #cbe7d1); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #DAD299 , #cbe7d1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     
 }	
 
 h1 {
@@ -22,53 +17,35 @@ h1 {
 	font-weight:700;
 	font-size:80px;
 	text-align:center;
-	/*color:white;*/
 	text-shadow: 2px 2px 0px rgba(0, 0, 0, 1);
 }
 
-.left {
-	/*padding:0px;*/
-	padding-right:9px;
-	padding-left:0px;
-}
-
-.right{
-	/*padding:0px;*/
-	padding-right:0px;
-	padding-left:9px;
-}
-
-.top {
-	padding-bottom:9px;
-}
-
-.bottom {
-	padding-top:9px;
-}
 
 .game-container {
 	width:405px;
-	/*background:orange;
-	border-radius:100%;
-	border: 26px solid black;
-	background-color:black;
-	position:relative;
-	padding:0px;
-	height:578px;
-	padding-top:13px;*/
 	border-radius:100%;
 	background-color:#0d0d0d;
 	border:18px solid #0d0d0d;
 	position:relative;
-
 	-webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-
 }
 
-.row {
-	/*margin-left:13px;*/
+/*color locations*/
+.left {
+	padding-right:9px;
+	padding-left:0px;
+}
+.right{
+	padding-right:0px;
+	padding-left:9px;
+}
+.top {
+	padding-bottom:9px;
+}
+.bottom {
+	padding-top:9px;
 }
 
 .color {
@@ -79,41 +56,36 @@ h1 {
 }
 
 #green {
-	/*background-color:green;*/
     border-radius: 100% 0px 0 0;
-    /*cursor:pointer;*/
-
 }
 
 #red {
-	/*background-color:red;*/
     border-radius: 0px 100% 0 0;
 }
 
 #yellow {
-	/*background-color:yellow;*/
     border-radius: 0 0px 0 100%;
 }
 
 #blue {
-	/*background-color:blue;*/
     border-radius: 0px 0 100% 0;
 }
 
-.cursor {
-	cursor:pointer;
-}
-
+/*background colors*/
 .green-bg { background-color: #186839; }
 .red-bg { background-color: #cc2b19; }
 .yellow-bg { background-color: #c29d0a; }
 .blue-bg { background-color: #1c567d; }
-
+/*background colors on click*/
 .green-bg-active { background-color:#2fd072; }
 .red-bg-active { background-color:#eb6e60; }
 .yellow-bg-active { background-color:#f4cf3e; }
 .blue-bg-active { background-color:#2e90d1; }
 
+
+/*==================
+	Center Content
+==================*/
 #center {
 	height:175px;
 	width:175px;
@@ -141,6 +113,7 @@ h1 {
 	font-size:40px;
 	background-color:#2e050b;
 	width:74px;
+	height:49px;
 	line-height:45px;
 	margin-top:20px;
 }
@@ -148,10 +121,6 @@ h1 {
 	font-size:16px;
 	margin-top:10px;
 	height:26px;
-}
-
-.display-button: {
-
 }
 
 #start {
@@ -166,13 +135,13 @@ h1 {
 	cursor:pointer;
 }
 
+/*Strict Section*/
 #strictContainer {
 	position:absolute;
 	bottom:49px;
 	right:8px;
 	font-size:8px;
 }
-
 #strict {
 	width:26px;
 	padding-top:24px;
@@ -183,7 +152,6 @@ h1 {
 	margin-bottom:2px;
 	cursor:pointer;
 }
-
 #strictLightDisplay {
 	width:8px;
 	height:8px;
@@ -200,14 +168,9 @@ h1 {
 
 #start:active, #strict:active {
 	border-bottom:none;
-
 }
 
-
-.active {
-	background-color: rgba(255,255,255,0.5);
-}
-
+/*====footer===*/
 footer {
 	margin-top:40px;
 	text-align:center;
